[package]
name = "rendir-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.7"
toml = "0.8"
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.8"