[package]
name = "rendir-core"
version = "0.1.0"
edition = "2024"
description = "Core library for the Rendir static site generator — Markdown parsing, Vue 3 store construction, custom components, full-text search, i18n, and mdbook ingestion"
license = "MIT"
repository = "https://gitlab.com/hahihula/rendir"
homepage = "https://gitlab.com/hahihula/rendir"
readme = "../README.MD"
keywords = ["static-site-generator", "ssg", "markdown", "vue", "blog"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[dependencies]
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.7"
toml = "0.8"
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.8"