[package]
name = "rendir-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Rendir static site generator — render Markdown to Vue 3 SPAs in the browser"
license = "MIT"
repository = "https://gitlab.com/hahihula/rendir"
homepage = "https://gitlab.com/hahihula/rendir"
readme = "../README.MD"
keywords = ["rendir", "wasm", "markdown", "vue", "static-site-generator"]
categories = ["command-line-utilities", "development-tools", "web-programming", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rendir-core = { path = "../rendir-core", version = "0.1.0" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }