[package]
name = "rustpress-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rustpress-core = { path = "../rustpress-core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
walkdir = "2.3"
serde_json = "1.0"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
tiny_http = "0.12"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"