[package]
name = "rustpress-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustpress-core = { path = "../rustpress-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"